--- a/contents/05_FutureWork.tex
+++ b/contents/05_FutureWork.tex
@@ -4,5 +4,5 @@ A controversial implementation detail up for possible change is the constructor 
 
 Another feature that might be introduced is an abbriviated form of module blocks. Due to the feature's rather syntactic nature the requirement are parser changes leading then into the same semantics as module blocks. The feature might be included if import-free-single-function module blocks become a frequently recurring pattern. Also not entirely clear is what the import.meta.url of a module block should look like. Although it is save to assume that it's bound to the module's import.meta.url in which it is specified it is frowned upon to be the exact same. A possible setup would be the module's import.meta.url directly followed by something like: "$L\#^+C\#^+$" where the \#s stand for the exact line and column number of the module block. As this is also not fixed yet the implementation has to follow suit as soon as the import.meta.url semantics are fixed.
 
-In short, the implementation cannot be finalized in the scope of the thesis as the proposal won't be finished by far. A lot of details need to be worked on before the proposal can reach stage three. With stage three reached the implementation can be finished as the specification will be finished more or less. The testing in the scope of the thesis has to be adapted to the final implementation and the tests being released before the proposal can reach stage four. Since the implementation is tied closely to the proposal it can only be done as soon as the proposal is done which will earliest be in 2022.
+In short, the implementation cannot be finalized in the scope of the thesis as the proposal won't be finished by far. A lot of details need to be worked on before the proposal can reach stage three. With stage three reached the implementation can be finished as the specification will be finished more or less. The testing in the scope of the thesis has to be adapted to the final implementation and the tests being released before the proposal can reach stage four. Since the implementation is tied closely to the proposal it can only be done as soon as the proposal is completed and adopted by moving to stage 4 which will earliest be in 2022.
 
