--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -26,7 +26,11 @@
 %% Hier Abstact in der Sprache eingeben, in der die Arbeit geschrieben wurde.
 %% Enter here the abstract in the main language.
 
-The thesis aims at implementing an ECMAScript proposal from the TC39 proposals, the module blocks, into the existing Graal.js interpreter. Besides the initial task of changing the parser and the runtime and unit tests, the base framework for shipping code between processes is implemented and explicit benchmarks are shown. The final product contributes to the open source version of Graal.js on the platform github.com.
+%The thesis aims at implementing an ECMAScript proposal from the TC39 proposals, the module blocks, in the existing Graal.js interpreter. Besides the initial task of changing the parser and the runtime and unit tests, a base framework for shipping code between processes is implemented and explicit benchmarks are shown. The final artifact is contributed to the open source version of Graal.js on the platform github.com.
+
+The Graal.Js is an ECMAScript runtime engine and thus competes with engines the like of V8 by Google or SpiderMonkey by Mozilla. Although Graal.Js' environment, the GraalVM, provides the project vital vantages, the engine needs to stay ahead of the ECMAScript specification to offer full feature support. This is the entry point for this thesis' purpose, namely to implement an ECMAScript proposal from the TC9 proposals, in particular module blocks, in the existing Graal.Js project. Besides the initial task of changing the parser and the runtime, and conducting unit tests, a base framework for shipping code between processes is implemented.  It should be declared for the avoidance of doubt that the code shipping framework is not part of the proposal but rather an addition to make it more feasible in practice.
+
+The thesis starts with a theoretical briefing on the technologies in which the implementation resides in, i.e. the Java Virtual Machine, the GraalVM, the truffle implementation framework, Graal.Js and ECMAScript. Later on the proposal implementation and its integration into Graal.Js is explained in a brief way. Since the proposal and the base framework are connected by proximity of topic the framework's implementation also resides in Chapter 3. The implementation is followed up by unit tests which are mainly self-written but mixed with code snippets from the proposal's website to prove expected behavior. The thesis is then wrapped up with an outlook on future work and the thesis' conclusions. The thesis practical work, i.e. the implementation, is finished by contributing the final artifact to the open source version of Graal.Js on the platform github.com.
 
 	{\let\clearpage\relax
 	\ifeng	\selectlanguage{ngerman} \chapter*{Zusammenfassung}
@@ -36,7 +40,11 @@ The thesis aims at implementing an ECMAScript proposal from the TC39 proposals, 
 %% Hier Abstact in der jeweils anderen Sprache eingeben.
 %% Enter here the abtract in the other language.
 
-Die vorliegende Arbeit verfolgt das Ziel einen ECMAScript-Erweiterungsvorschlag aus den TC39-Erweiterungsvorschlägen, die module blocks, im bestehenden Graal.js-Interpreter zu implementieren. Nach der Implementierung im Parser und der Runtime und entsprechenden Tests wird weiters ein Framework zum Übertragen von Code zwischen Prozessen eingerichtet und dessen Performance mit ursprünglichen Implementierungen verglichen. Die finale Implementierung wird über die Plattform github.com der Open-Source-Version von Graal.js hinzugefügt.
+Das Graal.Js-Projekt umfasst eine Laufzeitumgebung für Skriptsprachen, die den ECMAScript-Standard implementieren. Aufgrund dieser Thematik muss sich die Graal.Js-engine mit anderen Laufzeitumgebungen wie der V8 von Google oder SpiderMonkey von Mozilla messen. Das Graal.Js-Projekt hat hierbei den Vorteil des gesamten GraalVM-Ökosystems auf seiner Seite. Ein zentraler Punkt, um sich gegen Wettbewerber durchzusetzen bleibt allerdings der Featuresupport. Um diesen vollumfänglich gewähren zu können, ist es notwendig, dass Features, die noch nicht im ECMAScript Standard integriert wurden, bei denen allerdings davon ausgegangen werden kann, in der Laufzeitumgebung zu implementieren. Dieser Featuresupport bildet die Grundlage für die vorliegende Arbeit, deren Ziel es ist einen ECMAScript-Erweiterungsvorschlag aus den TC39 Erweiterungsvorschlägen, die sogenannten module blocks, im bestehenden Graal.Js-Interpreter zu implementieren. Nach der Implementierung im Parser und der Runtime und entsprechenden Tests wird weiters ein Framework zum Übertragen von Code zwischen Prozessen eingerichtet. Das Framework selbst ist nicht Teil des Proposals, sondern eine praktische Erweiterung für das Projekt selbst.
+
+Die vorliegende Arbeit beginnt mit einer theoretischen Einführung in die beteiligten Technologien. Diese umfassen die Java Virtual Machine, die GraalVM, das Truffle Implementierungsframework, Graal.Js und ECMAScript. Folgend wird die Implementierung des Erweiterungsvorschlags und dessen Integration in das Graal.Js-Projekt erläutert. Im selben Kapitel wird aufgrund der thematischen Nähe auch das Übertragungsframework beschrieben. Danach werden die durchgeführten Tests gezeigt. Diese umfassen selbst geschriebene Tests und Tests, die von der Webseite des Erweiterungsvorschlags übernommen wurden, um erwartetes Verhalten zu prüfen. Die Arbeit wird mit einem Ausblick auf zukünftige Arbeit und einem Fazit abgeschlossen. Der praktische Teil der Arbeit findet seinen Abschluss durch Einbringen des fertigen Codes in die Open Source-Version von Graal.Js auf der Plattform github.com.
+
+%Die vorliegende Arbeit verfolgt das Ziel einen ECMAScript-Erweiterungsvorschlag aus den TC39-Erweiterungsvorschlägen, die module blocks, im bestehenden Graal.js-Interpreter zu implementieren. Nach der Implementierung im Parser und der Runtime und entsprechenden Tests wird weiters ein Framework zum Übertragen von Code zwischen Prozessen eingerichtet und dessen Performance mit ursprünglichen Implementierungen verglichen. Die finale Implementierung wird über die Plattform github.com der Open-Source-Version von Graal.js hinzugefügt.
 
 	\ifeng	\selectlanguage{english}
 	\else 	\selectlanguage{ngerman}
