--- a/literature.bib
+++ b/literature.bib
@@ -213,3 +213,22 @@ url = {https://docs.oracle.com/javase/specs/jls/se16/jls16.pdf}
 	url = {https://pypl.github.io/PYPL.html},
 	urldate = {2021-04-03}
 }
+
+@online{graalTwitter,
+    author = {Maika Möbus},
+    title = {GraalVM: Clearing up confusion around the term and why Twitter uses it in production},
+    url = {https://jaxenter.com/graalvm-chris-thalinger-interview-163074.html},
+    urldate = {2021-07-01}
+}
+
+@online{workers,
+    title = {Using Web Workers},
+    url = {https://developer.mozilla.org/en-US/docs/Web/API/Web_Workers_API/Using_web_workers},
+    urldate = {2021-07-01}
+}
+
+@online{pCode,
+    title = {p-System Operating System manual},
+    url = {http://www.sageandstride.org/html/manuals.html},
+    urldate = {2021-07-01}
+}
