--- a/contents/06_Conclusions.tex
+++ b/contents/06_Conclusions.tex
@@ -1,5 +1,5 @@
 %In the scope of the thesis the ECMAScript TC39 proposal "module blocks" was implemented into the Graal.js project which resides inside the GraalVM ecosystem. The implementation was split into a syntactic and semantic part, with the semantic part being conducted through introducing a new Node according to general Truffle rules and the given proposal specification. The syntactic part was introduced via minor changes in the preexisting Graal.js parser. Testing the implementation consisted of applying the preexisting Test262 official ECMAScript test suite and explicitly for the proposal written unit tests on it. To finish off embedding the proposal a serialization algorithm was written and tested with a proof of concept test via a Worker. Reiterating the fact that the proposal is not finished yet and supposed to undergo changes, it can be said that the base for contributing this stage two proposal to the Graal.js project is laid out.
 
-In the scope of the thesis the ECMAScript TC39 proposal module blocks was implemented into the Graal.js project which resides inside the GraalVM ecosystem. The proposal enhances module usage in ECMAScript and has thus the potential to greatly impact their usage throughout the internet especially by simplifying use of Workers. For this to happen the proposal itself is not enough, at least not in the Graal.js project since code has to be serialized before being sent to another process. The serialization and deserialization is also implemented in order to enhance the practical feasibility. Now, inline JavaScript code can be sent back and forth between processes resulting in lower network footprint as code and results have to be sent but not whole data packages. Another point to keep in mind that early proposal adaptation greatly helps keeping on par with the ECMAScript specification's development but also the rival engines. The implementation passes the preexisting Test262 official ECMAScript test suite and explicitly for the proposal written unit tests on it. Since the proposal is not finished yet the thesis laid the groundwork for implementing the upcoming further developments on the proposal into the Graal.js project.
+In the scope of the thesis the ECMAScript TC39 proposal module blocks was implemented into the Graal.js project which resides inside the GraalVM ecosystem. The proposal enhances module usage in ECMAScript and has thus the potential to greatly impact their usage throughout the internet especially by simplifying use of Workers. For this to happen the proposal itself is not enough, at least not in the Graal.js project since code has to be serialized before being sent to another process. The serialization and deserialization is also implemented in order to enhance the practical feasibility. Now, inline JavaScript code can be sent back and forth between processes resulting in lower network footprint as code and results have to be sent but not whole data packages. Another point to keep in mind that early proposal adaptation greatly helps keeping on par with the ECMAScript specification's development but also the rival engines. The implementation passes the preexisting Test262 official ECMAScript test suite and explicitly for the proposal written unit tests on it. In the thesis it was shown that the module block implementation has no performance downside compared to regular code like function calls or modules. This was shown via toy examples and should be matured alongside further implementation and proposal development. Since the proposal is not finished yet the thesis laid the groundwork for implementing the upcoming further developments on the proposal into the Graal.js project.
 
 
