--- a/literature.bib
+++ b/literature.bib
@@ -232,3 +232,15 @@ url = {https://docs.oracle.com/javase/specs/jls/se16/jls16.pdf}
     url = {http://www.sageandstride.org/html/manuals.html},
     urldate = {2021-07-01}
 }
+
+@book{HennessyJohnL2007Ca:a,
+    publisher = {Elsevier Morgan Kaufmann},
+    isbn = {9780123704900},
+    year = {2007},
+    title = {Computer architecture : a quantitative approach},
+    edition = {4. ed.},
+    language = {eng},
+    author = {Hennessy, John L},
+    keywords = {Computer architecture ; Computerarchitektur},
+    url = {http://media.obvsg.at/AC05695781-1001},
+}
