--- a/contents/01_Introduction.tex
+++ b/contents/01_Introduction.tex
@@ -10,7 +10,7 @@ Module blocks are an effort by \emph{Daniel Ehrenberg} \footnote{https://github.
 
 The main objective of this thesis is to implement the new ECMAScript stage 2 proposal module blocks into the Graal.js engine which is implemented via the Truffle framework. Furthermore testing for this implementation will be conducted. When the general workings are set a code shipping framework and benchmarks will be included.
 
-The thesis is divided into five further chapters. Chapter 2 explains the theoretical background of the thesis. In the following Chapter 3 the implementation and the testing is addressed. Afterwards, Chapter 4, evaluates the implementation with extensive tests. The thesis is then rounded up in Chapter 5 and 6 by highlighting future work and a conclusion.
+The thesis is divided into five further chapters. Chapter 2 explains the theoretical background of the thesis. In the following Chapter 3 the implementation and the testing is addressed. Afterwards, Chapter 4, evaluates the implementation with extensive tests, including a short benchmark test. The thesis is then rounded up in Chapter 5 and 6 by highlighting future work and a conclusion.
 
 % further notes to think about on thesis introduction
 %Runtime relevancy - to stay relevant new features need to be implemented asap - module blocks\\
